# robin-runtime

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: .gitignore
.github/: CODEOWNERS
.github/workflows/: deploy.yml
contracts/: learning-event-v1.schema.json
deploy/: README.md  env.example  setup.sh  sync-mirrors.sh
deploy/systemd/: robin-digest-daily.service  robin-digest-daily.timer  robin-digest-weekly.service  robin-digest-weekly.timer  robin-liveness.service  robin-liveness.timer  robin-mirror-sync.service  robin-mirror-sync.timer  robin-selfreview.service  robin-selfreview.timer  robin-telegram.service  robin-web.service
src/robin/: __init__.py  agent.py  changes.py  config.py  digest.py  fmt.py  gaps.py  guard.py  kb.py  learning_events.py  learnings.py  liveness.py  log.py  memory.py  selfreview.py  voice.py
src/robin/adapters/: __init__.py  telegram.py  web.py
src/robin/adapters/static/: index.html
tests/: test_agent.py  test_changes.py  test_compose.py  test_digest.py  test_fmt.py  test_gaps.py  test_guard.py  test_kb.py  test_learning_events.py  test_learnings.py  test_memory.py  test_selfreview.py  test_telegram.py  test_voice.py  test_web.py
